[gd_scene load_steps=5 format=3 uid="uid://gbvopuoe0kt8"]

[ext_resource type="Texture2D" uid="uid://24i1r61rrf8d" path="res://assets/Art Folder/test paper.png" id="2_fsmpk"]
[ext_resource type="Script" path="res://scripts/folding_minigame.gd" id="2_r2kfw"]
[ext_resource type="Texture2D" uid="uid://db5u5h6klxp2a" path="res://assets/Art Folder/test indicator.png" id="4_qcdyg"]
[ext_resource type="Texture2D" uid="uid://oukb5vqnb3k5" path="res://assets/Art Folder/test goal.png" id="5_7k83o"]

[node name="FoldingMinigame" type="Sprite2D"]
position = Vector2(587, 338)
scale = Vector2(2.07826, 2.07826)
texture = ExtResource("2_fsmpk")
script = ExtResource("2_r2kfw")

[node name="IndicatorSprite" type="Sprite2D" parent="."]
scale = Vector2(1, 0.480334)
texture = ExtResource("4_qcdyg")

[node name="GoalSprite" type="Sprite2D" parent="."]
texture = ExtResource("5_7k83o")
